--- a/publicHTML/about.html
+++ b/publicHTML/about.html
@@ -20,6 +20,8 @@
             <article id="author">
                 <h2>It Me!</h2>
                 <p>Sean Kirkpatrick (he/him) is a Vietnamese-American queer anti-capitalist anarchist from Ohio.  He moved to Portland, OR in 2008, ignorant of the deeply racist history of the state, but excited by the coffee shops and bicycle infrastructure.  His interests vary from rock climbing and guitar playing to folding origami and cultivating bonsai.  With a software career ranging from industrial HMI and database development to scientific instrument firmware prototyping, he is much more a jack-of-all-trades than a specialist.</p>
+
+                <p>I also create a variety of art under the name <a href="https://www.studioantipode.com">Studio Antipode</a>.</p>
             </article>
             <article id="tools">
                 <h2>Software Tools</h2>
